test/src/e2e_vm_tests/test_programs/should_fail/encode_buffer_empty_with_args/src/main.sw
library;

struct Buffer {
    buffer: (raw_ptr, u64, u64),
}

impl Buffer {
    pub fn new() -> Self {
        Buffer {
            buffer: __encode_buffer_empty(self),
        }
    }
}